--- a/jmix/src/main/resources/com/company/project/messages_en.properties
+++ b/jmix/src/main/resources/com/company/project/messages_en.properties
@@ -8,7 +8,7 @@ com.company.project.entity/Camp.tourists=Tourists
 com.company.project.entity/Route=Route
 com.company.project.entity/Route.camp=Camp
 com.company.project.entity/Route.id=Id
-com.company.project.entity/Route.lenth=Lenth
+length=Lenth
 com.company.project.entity/Route.number=Number
 com.company.project.entity/Route.tourists=Tourists
 com.company.project.entity/Tourist=Tourist
@@ -16,6 +16,7 @@ com.company.project.entity/Tourist.birthDay=Birth day
 com.company.project.entity/Tourist.camp=Camp
 com.company.project.entity/Tourist.id=Id
 com.company.project.entity/Tourist.name=Name
+com.company.project.entity/Tourist.routes=Tourist routes
 com.company.project.entity/User=User
 com.company.project.entity/User.id=ID
 com.company.project.entity/User.username=Username
